[gd_scene load_steps=5 format=3 uid="uid://cwauwbvsf38y8"]

[ext_resource type="Script" uid="uid://capwl7tw35ck3" path="res://Scenes/boardroomBrain.gd" id="1_c6jm2"]
[ext_resource type="Texture2D" uid="uid://bh2ob7luq8sml" path="res://Visual Assets/New Assets/Full Screen Scenes/Boardroom Screen.png" id="1_jrmwu"]
[ext_resource type="Texture2D" uid="uid://bln8xvggdaxt2" path="res://Visual Assets/New Assets/Full Screen Scenes/Boardroom Powerpoint updated.png" id="3_ok08t"]
[ext_resource type="PackedScene" uid="uid://qp5c0ubam6af" path="res://Scenes/pause.tscn" id="4_ok08t"]

[node name="Boardroom" type="Node2D" node_paths=PackedStringArray("slides", "MozAnchor", "BossAnchor", "OluAnchor", "RichardAnchor", "PauseMenu")]
script = ExtResource("1_c6jm2")
slides = NodePath("Slides")
MozAnchor = NodePath("MozDialogAnchor")
BossAnchor = NodePath("PMooreAnhcor")
OluAnchor = NodePath("OluAnchor")
RichardAnchor = NodePath("RichardAnchor")
PauseMenu = NodePath("Pause")

[node name="StaticBackground" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
texture = ExtResource("1_jrmwu")

[node name="Slides" type="Sprite2D" parent="."]
z_index = -1
texture_filter = 1
position = Vector2(2967, -32)
scale = Vector2(2, 2)
texture = ExtResource("3_ok08t")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Slides")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="MozDialogAnchor" type="Node2D" parent="."]
position = Vector2(-707, -223)

[node name="PMooreAnhcor" type="Node2D" parent="."]
position = Vector2(799, 425)

[node name="OluAnchor" type="Node2D" parent="."]
position = Vector2(198, 459)

[node name="RichardAnchor" type="Node2D" parent="."]
position = Vector2(-287, 452)

[node name="DaveAnchor" type="Node2D" parent="."]
position = Vector2(591, 480)

[node name="Pause" parent="." instance=ExtResource("4_ok08t")]
